version 1.6.5+
	* Fix bug in shell's invalidate() function

version 1.6.5 Mon Mar 12 by luispedro
	* Add get_tasks() to 'jug shell' and document 'from jug.task import
	alltasks' (patch by Renato Alves)

version 1.6.4 Wed Nov 1 by luispedro
	* Fix exit_after_n_tasks. It would previously execute one task too many

version 1.6.3 Wed Nov 1 by luispedro
	* Add citation request

version 1.6.2 Thu Oct 26 by luispedro
	* Add return_value argument to jug_execute
	* Add exit_env_vars

version 1.6.1 Thu Aug 29 by luispedro
	* Fix bug with `invalidate()` in the shell

version 1.6.0 Thu Aug 24 by luispedro
	* Add 'graph' subcommand - Generates a graph of tasks
	* 'jug execute --keep-going' now ends with non-zero exit code in case of failures
	* Fix bug with cleanup in dict_store not providing the number of removed records
	* Add 'jug cleanup --keep-locks' to remove obsolete results without affecting locks

version 1.5.0 Sun Jul 16 2017 by luispedro
	* Add 'demo' subcommand
	* Add is_jug_running() function
	* Fix bug in finding config files
	* Improved --debug mode: check for unsupported recursive task creation
	* Add invalidate() to shell environment
	* Use ~/.config/jug/jugrc as configuration file
	* Add experimental support for extensible commands, use
	~/.config/jug/jug_user_commands.py
	* jugrc: execute_wait_cycle_time_secs is now execute_wait_cycle_time
	* Expose sync_move in jug.utils

version 1.4.0 Tue Jan 3 2017 by luispedro
	* Fix bug with writing very large objects to disk
	* Smarter handling of --aggressive-unload (do not unload what will be
	immediately necessary)
	* Work around corner case in `jug shell` command
	* Add test-jug subcommand
	* Add return_tuple decorator

version 1.3.0 Tue Nov 1 2016 by luispedro
	* Update `shell` subcommand to IPython 5
	* Use ~/.config/jugrc as configuration file
	* Cleanup usage string
	* Use `bottle` instead of `web.py` for webstatus subcommand
	* Add `jug_execute` function
	* Add timing functionality
